✨ feat: index.html 메타데이터 및 Open Graph 태그 추가

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tutorial Sejong</title>
+    <title>Tutorial Sejong - 세종대학교 수강신청 연습 사이트</title>
+    <meta name="description" content="세종대학교 학생들을 위한 수강신청 연습 사이트. 실제 수강신청 전에 미리 연습해보세요." />
+    <meta name="keywords" content="세종대학교, 수강신청, 연습, Tutorial Sejong, 세종대, 수강신청 연습, 수강신청 연습 사이트" />
+    <meta name="author" content="Tutorial Sejong" />
+    <meta name="theme-color" content="#DC143C" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tutorial Sejong - 세종대학교 수강신청 연습 사이트" />
+    <meta property="og:description" content="세종대학교 학생들을 위한 수강신청 연습 사이트입니다. 실제 수강신청 전에 미리 연습해보세요." />
+    <meta property="og:site_name" content="Tutorial Sejong" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tutorial Sejong - 세종대학교 수강신청 연습 사이트" />
+    <meta name="twitter:description" content="세종대학교 학생들을 위한 수강신청 연습 사이트. 실제 수강신청 전에 미리 연습해보세요." />
   </head>
   <body>
     <div id="root"></div>
